# StudentForm_QML

./: AcademicDetails.qml  CMakeLists.txt  CustomComboBox.qml  GuardianInformation.qml  PersonalProfile.qml  StudentForm_GTest.pro  main.cpp  main.qml  qml.qrc  studentmodel.cpp  studentmodel.h  studentmodel_test.cpp
